control-plane-operator/controllers/hostedcontrolplane/testdata/metrics-proxy/ModernTLS/zz_fixture_TestControlPlaneComponents_metrics_proxy_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    hypershift.openshift.io/desired-state-hash: 21f98dbe4921e55db1b62b1eb177c2e3fde054a886ef790384de208fc035a38d
  labels:
    hypershift.openshift.io/managed-by: control-plane-operator
  name: metrics-proxy
  namespace: hcp-namespace
  ownerReferences:
  - apiVersion: hypershift.openshift.io/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: HostedControlPlane
    name: hcp
    uid: ""
  resourceVersion: "1"
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: metrics-proxy
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict-local-volumes: tmp-dir
        component.hypershift.openshift.io/config-hash: 741638a5741638a587ecf31a87ecf31af44079cb
        hypershift.openshift.io/release-image: quay.io/openshift-release-dev/ocp-release:4.16.10-x86_64
      labels:
        app: metrics-proxy
        hypershift.openshift.io/control-plane-component: metrics-proxy
        hypershift.openshift.io/hosted-control-plane: hcp-namespace
        hypershift.openshift.io/request-serving-component: "true"
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: hypershift.openshift.io/control-plane
                operator: In
                values:
                - "true"
            weight: 50
          - preference:
              matchExpressions:
              - key: hypershift.openshift.io/cluster
                operator: In
                values:
                - hcp-namespace
            weight: 100
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  hypershift.openshift.io/hosted-control-plane: hcp-namespace
              topologyKey: kubernetes.io/hostname
            weight: 100
      automountServiceAccountToken: false
      containers:
      - args:
        - --tls-cert-file
        - /etc/metrics-proxy/serving-cert/tls.crt
        - --tls-key-file
        - /etc/metrics-proxy/serving-cert/tls.key
        - --client-ca-file
        - /etc/metrics-proxy/client-ca/ca.crt
        - --config-file
        - /etc/metrics-proxy/config/config.yaml
        - --metrics-set
        - All
        command:
        - /usr/bin/control-plane-operator
        - metrics-proxy
        env:
        - name: MY_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: controlplane-operator
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /healthz
            port: 9443
            scheme: HTTPS
          initialDelaySeconds: 120
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 5
        name: metrics-proxy
        ports:
        - containerPort: 9443
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 9443
            scheme: HTTPS
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 10m
            memory: 40Mi
        securityContext:
          readOnlyRootFilesystem: true
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /etc/metrics-proxy/serving-cert
          name: serving-cert
        - mountPath: /etc/metrics-proxy/client-ca
          name: client-ca
        - mountPath: /etc/metrics-proxy/config
          name: scrape-config
        - mountPath: /etc/metrics-proxy/certs/endpoint-resolver-ca
          name: endpoint-resolver-ca
        - mountPath: /tmp
          name: tmp-dir
      priorityClassName: hypershift-control-plane
      serviceAccount: metrics-proxy
      serviceAccountName: metrics-proxy
      terminationGracePeriodSeconds: 10
      tolerations:
      - effect: NoSchedule
        key: hypershift.openshift.io/control-plane
        operator: Equal
        value: "true"
      - effect: NoSchedule
        key: hypershift.openshift.io/cluster
        operator: Equal
        value: hcp-namespace
      volumes:
      - name: serving-cert
        secret:
          defaultMode: 416
          secretName: metrics-proxy-serving-cert
      - name: client-ca
        secret:
          defaultMode: 416
          secretName: cluster-signer-ca
      - configMap:
          defaultMode: 420
          name: metrics-proxy-config
          optional: true
        name: scrape-config
      - name: endpoint-resolver-ca
        secret:
          defaultMode: 416
          optional: true
          secretName: endpoint-resolver-ca
      - emptyDir: {}
        name: tmp-dir
status: {}
