control-plane-operator/controllers/hostedcontrolplane/testdata/metrics-proxy/ModernTLS/zz_fixture_TestControlPlaneComponents_metrics_proxy_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    hypershift.openshift.io/desired-state-hash: 854f50a70f18c92835410cc08d18ad16c221b56ebf9cfdf81e0037493a9ac44a
  labels:
    hypershift.openshift.io/hosted-control-plane: hcp-namespace
  name: metrics-proxy
  namespace: hcp-namespace
  ownerReferences:
  - apiVersion: hypershift.openshift.io/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: HostedControlPlane
    name: hcp
    uid: ""
  resourceVersion: "1"
spec:
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: metrics-proxy
    weight: null
  wildcardPolicy: None
status: {}
